# taproot-rca

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  taproot.dev.yaml  taproot.yaml
dev/: drift.sql  seed.sql
migrations/dev-ecommerce/: V20260406214030__dev-ecommerce_drift.rollback.sql  V20260406214030__dev-ecommerce_drift.sql  V20260413162713__dev-ecommerce_drift.rollback.sql  V20260413162713__dev-ecommerce_drift.sql  V20260413163045__dev-ecommerce_drift.rollback.sql  V20260413163045__dev-ecommerce_drift.sql  V20260413163615__dev-ecommerce_drift.rollback.sql  V20260413163615__dev-ecommerce_drift.sql
src/taproot_rca/: cli.py  config.py  demo.py  docs_generator.py  env_resolver.py  ollama_client.py  ollama_manager.py  pipeline.py  prompt_engine.py  scaffold.py  schema_diff.py  snapshot_store.py  sql_extractor.py
src/taproot_rca/connectors/: postgres.py
src/taproot_rca/git_ops/: healer.py
tests/: test_config.py  test_docs.py  test_pipeline.py  test_scan_pipeline.py  test_self_heal.py
